[package]
name = "twitter-axum-clone"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.76"
axum = "0.7.2"
bcrypt = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.20"
env_logger = "0.10.1"
jsonwebtoken = "9.2.0"
tracing = "0.1.40"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "macros",
    "any",
    "postgres",
    "chrono",
] }
